package be.kdg.talenten.domain;

public enum ToewijzingsType {
    MANUEEL, AUTOMATISCH
}
