package be.kdg.talenten.domain;

public class Voorkeur {
}
