package be.kdg.talenten.repository;

public class LeerlingRepository {
}
