package be.kdg.talenten.verdeling;

public class AutomatischeVerdeler {
}
